--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,15 @@ a {
   font-size: 18px;
 }
 
+.bold_span {
+  color: #fff;
+  font-family: "FuturaFuturisC", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 122.8%;
+  text-transform: uppercase;
+}
+
 @media (max-width: 1370px) {
   .header-container {
     flex-direction: column;
@@ -418,6 +427,9 @@ a {
   }
 }
 @media (max-width: 800px) {
+  .advantages {
+    padding-block: 60px;
+  }
   .advantages__cards {
     grid-template-columns: 1fr;
   }
@@ -516,9 +528,10 @@ a {
 }
 .scheme__blocks {
   display: grid;
-  grid-template-columns: max-content max-content max-content;
-  grid-template-areas: "first second third" "six five four";
+  grid-template-columns: repeat(3, auto);
   margin-bottom: 49px;
+  justify-items: end;
+  position: relative;
 }
 .scheme__block {
   position: relative;
@@ -527,7 +540,7 @@ a {
 .scheme__block-main {
   position: absolute;
   top: 38px;
-  left: 35px;
+  left: 42px;
 }
 .scheme__block-header {
   display: flex;
@@ -577,32 +590,6 @@ a {
 .scheme-button {
   background: #ffa500;
   padding-inline: 72px;
-}
-
-.first {
-  grid-area: first;
-}
-
-.second {
-  grid-area: second;
-}
-
-.third {
-  grid-area: third;
-  justify-self: flex-end;
-}
-
-.four {
-  grid-area: four;
-}
-
-.five {
-  grid-area: five;
-}
-
-.six {
-  grid-area: six;
-  justify-self: end;
 }
 
 @media (max-width: 1290px) {
@@ -757,6 +744,11 @@ a {
   .faq__main .faq-open {
     padding-inline-start: 33px;
     padding-inline-end: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .faq__main-question {
+    font-size: 20px;
   }
 }
 .footer {
