--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -14,14 +14,14 @@
 
 @font-face {
     font-family: 'FuturaFuturisC';
-    src: url(./FuturaFuturisC\ Regular.woff2) format('woff2');
+    src: url(./FuturaFuturisC.woff2) format('woff2');
     font-weight: 400;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'FuturaFuturisC';
-    src: url(./FuturaFuturisC\ Bold.woff2) format('woff2');
+    src: url(./FuturaFuturisC-Bold.otf) format('opentype');
     font-weight: 700;
     font-display: swap;
 }
