--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,7 +10,7 @@
     color: var(--text-color-light);
 
     &-scroll {
-        background: #07086c;
+        background: var(--bg-for-scroll);
     }
 
     &-container {
@@ -29,7 +29,7 @@
     &__list {
         display: flex;
         gap: 35px;
-        font-family: var(--font-navigation);
+        font-family: var(--font-FuturaLightC);
         font-size: 18px;
         line-height: 122.8%;
     }
@@ -38,7 +38,7 @@
         display: flex;
         align-items: center;
         gap: 9px;
-        font-family: 'FuturaFuturisC', sans-serif;
+        font-family: var(--font-FuturaFuturisC);
         font-weight: 400;
         font-size: 18px;
     }
@@ -46,7 +46,6 @@
 
 .bold_span {
     color: #fff;
-    font-family: 'FuturaFuturisC', sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 122.8%;
