--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -21,14 +21,7 @@
 
 @font-face {
     font-family: 'FuturaFuturisC';
-    src: url(./FuturaFuturisC-Bold.otf) format('opentype');
-    font-weight: 700;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'FuturaFuturisC';
-    src: url(./FuturaFuturisC\ Bold.woff2) format('woff2');
+    src: url(./futurafuturisc-bold.otf) format('opentype');
     font-weight: 700;
     font-display: swap;
 }
@@ -36,55 +29,6 @@
 @font-face {
     font-family: 'FuturaLightC';
     src: url(./FuturaLightC\ Regular.woff2) format('woff2');
-    font-weight: 400;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url(./Poppins-Bold.woff2) format('woff2');
-    font-weight: 700;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url(./Poppins-ExtraBold.woff2) format('woff2');
-    font-weight: 800;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url(./Poppins-Light.woff2) format('woff2');
-    font-weight: 300;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url(./Poppins-Medium.woff2) format('woff2');
-    font-weight: 500;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url(./Poppins-Regular.woff2) format('woff2');
-    font-weight: 400;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Poppins';
-    src: url(./Poppins-SemiBold.woff2) format('woff2');
-    font-weight: 600;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Proximanova';
-    src: url(./proximanova_regular.woff2) format('woff2');
     font-weight: 400;
     font-display: swap;
 }
