--- a/scss/_introduce.scss
+++ b/scss/_introduce.scss
@@ -5,12 +5,12 @@
     gap: 50px;
     align-items: start;
 
-    font-family: 'FuturaBookC', sans-serif;
+    font-family: var(--font-FuturaBookC);
     font-weight: 400;
     &__info {
         &-title {
             color: var(--text-color-light);
-            font-family: 'FuturaFuturisC', sans-serif;
+            font-family: var(--font-FuturaFuturisC);
             font-size: clamp(40px, 5.2vw, 69.23px);
             font-weight: 700;
             line-height: 99.8%;
@@ -88,7 +88,7 @@
             color: var(--text-color-light);
             text-align: center;
             text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-            font-family: 'FuturaFuturisC', sans-serif;
+            font-family: var(--font-FuturaFuturisC);
             font-size: 23px;
             font-weight: 700;
         }
@@ -130,13 +130,13 @@
 
 .form {
     &-label {
-        color: #626366;
+        color: var(--form-label);
         font-size: 18px;
         line-height: 128.906%;
     }
 
     &-input {
-        font-family: 'FuturaBookC', sans-serif;
+        font-family: var(--font-FuturaBookC);
         font-size: 20px;
         border: none;
         padding: 20px;
@@ -146,7 +146,7 @@
     }
 
     &-button {
-        background: #ffa500;
+        background: var(--button-light-color);
         margin-top: 30px;
     }
 }
