--- a/scss/_producers.scss
+++ b/scss/_producers.scss
@@ -2,7 +2,7 @@
     padding-block: 103px 93px;
     background: url(../images/Icons/Producers.svg) lightgray 50% / cover
         no-repeat;
-    background-color: #0809a7;
+    background-color: var(--bg-color-blue);
     background-blend-mode: lighten;
 
     &-title {
@@ -66,7 +66,7 @@
         font-family: 'FuturaBookC', sans-serif;
         font-weight: 400;
         font-size: 18px;
-        line-height: 31px; /* 155% */
+        line-height: 31px;
     }
 }
 
