--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: 'FuturaFuturisC';
-    src: url(./futurafuturisc-bold.otf) format('opentype');
+    src: url(./futurafuturiscBold.otf) format('opentype');
     font-weight: 700;
     font-display: swap;
 }
