--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,7 @@ a {
   .header-container {
     flex-direction: column;
     align-items: flex-start;
+    gap: 5px;
   }
 }
 @media (max-width: 820px) {
@@ -285,7 +286,7 @@ a {
   color: var(--text-color-light);
   text-align: center;
   text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-  font-family: var(--font-FuturaFuturisC);
+  font-family: "FuturaFuturisC", sans-serif;
   font-size: 23px;
   font-weight: 700;
 }
@@ -405,6 +406,7 @@ a {
   margin-bottom: 14px;
   color: var(--card-title-color);
   font-family: "FuturaFuturisC", sans-serif;
+  font-weight: 700;
   font-size: 20px;
   line-height: normal;
   text-align: center;
