--- a/scss/_advantages.scss
+++ b/scss/_advantages.scss
@@ -56,6 +56,7 @@
             margin-bottom: 14px;
             color: var(--card-title-color);
             font-family: 'FuturaFuturisC', sans-serif;
+            font-weight: 700;
             font-size: 20px;
             line-height: normal;
             text-align: center;
