--- a/scss/_introduce.scss
+++ b/scss/_introduce.scss
@@ -88,7 +88,7 @@
             color: var(--text-color-light);
             text-align: center;
             text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-            font-family: var(--font-FuturaFuturisC);
+            font-family: 'FuturaFuturisC', sans-serif;
             font-size: 23px;
             font-weight: 700;
         }
