--- a/scss/_producers.scss
+++ b/scss/_producers.scss
@@ -63,9 +63,9 @@
 
     &-text {
         color: #fff;
-        font-family: 'FuturaBookC', sans-serif;
+        font-family: var(--font-FuturaBookC);
         font-weight: 400;
-        font-size: 18px;
+        font-size: 19px;
         line-height: 31px;
     }
 }
