--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -98,7 +98,7 @@ a {
 }
 
 .wrapper-top {
-    background: url(../images/Icons/header.svg),
+    background: url(../images/Icons/Header.png),
         url(../images/Backgrounds/Header.svg);
     background-size: cover;
 }
