--- a/scss/_producers.scss
+++ b/scss/_producers.scss
@@ -1,6 +1,6 @@
 .producers {
     padding-block: 103px 93px;
-    background: url(../images/Icons/Producers.svg) lightgray 50% / cover
+    background: url(../images/Icons/Producers.png) lightgray 50% / cover
         no-repeat;
     background-color: var(--bg-color-blue);
     background-blend-mode: lighten;
